remove tailwind css

--- a/views/partials/app.css
+++ b/views/partials/app.css
@@ -217,7 +217,7 @@ nav {
   width: 100%;
   display: flex;
   align-items: center;
-  background: #ecf5ff ff;
+  background: #ecf5ff;
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
 }
 
