--- a/views/partials/app.css
+++ b/views/partials/app.css
@@ -1,87 +1,6 @@
 /* Google Fonts - Oswald */
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap');
 
-:root {
-  background-color: #ecf5ff;
-  font-size: 62.5%;
-}
-
-* {
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-  padding: 0;
-  color: #333;
-}
-
-h1,
-h2,
-h3,
-h4 {
-  margin-bottom: 1rem;
-}
-
-h1 {
-  font-size: 5.4rem;
-  color: #56a5eb;
-  margin-bottom: 5rem;
-}
-
-h1>span {
-  font-size: 2.4rem;
-  font-weight: 500;
-}
-
-h2 {
-  font-size: 4.2rem;
-  margin-bottom: 4rem;
-  font-weight: 700;
-}
-
-h3 {
-  font-size: 2.8rem;
-  font-weight: 500;
-}
-
-/* UTILITIES */
-
-.container {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 80rem;
-  margin: 0 auto;
-  padding: 2rem;
-}
-
-.container>* {
-  width: 100%;
-}
-
-.flex-column {
-  display: flex;
-  flex-direction: column;
-}
-
-.flex-center {
-  justify-content: center;
-  align-items: center;
-}
-
-.justify-center {
-  justify-content: center;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.hidden {
-  display: none;
-}
-
 /* BUTTONS */
 .btn {
   font-size: 1.8rem;
@@ -147,6 +66,12 @@ input::placeholder {
   font-size: 14px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   display: none;
+}
+#body-content {
+  position: absolute;
+  top: 70px;
+  width: 100%;
+  height: calc(100% - 70px);
 }
 
 /* TOGGLE */
@@ -332,68 +257,9 @@ nav.open~.overlay {
   height: 70px;
 }
 
-/* FILTER */
-
-.list-container {
-  position: fixed;
-  display: table;
-  top: auto;
-  width: 60px;
-  height: 34px;
-  margin-left: auto;
-  margin-right: 12px;
-}
-
 /* LANDMARKS */
 
 .mapboxgl-popup {
-  max-width: 400px;
+  max-width: 600px;
   font: 1rem 'Helvetica Neue', Arial, Helvetica, sans-serif;
-}
-
-.filter-group {
-  font: 1rem 'Helvetica Neue', Arial, Helvetica, sans-serif;
-  font-weight: 600;
-  position: absolute;
-  top: 25%;
-  right: 1%;
-  z-index: 1;
-  border-radius: 3px;
-  width: 11rem;
-}
-
-.filter-group input[type='checkbox']:first-child+label {
-  border-radius: 3px 3px 0 0;
-}
-
-.filter-group label:last-child {
-  border-radius: 0 0 3px 3px;
-  border: none;
-}
-
-.filter-group input[type='checkbox'] {
-  display: none;
-}
-
-.filter-group input[type='checkbox']+label {
-  background-color: #3386c0;
-  display: block;
-  cursor: pointer;
-  padding: 10px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
-}
-
-.filter-group input[type='checkbox']+label {
-  background-color: #3386c0;
-  text-transform: capitalize;
-}
-
-.filter-group input[type='checkbox']+label:hover,
-.filter-group input[type='checkbox']:checked+label {
-  background-color: #4ea0da;
-}
-
-.filter-group input[type='checkbox']:checked+label:before {
-  content: '✔';
-  margin-right: 5px;
 }
